--- a/resources/index.html
+++ b/resources/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="container">
             <aside class="sidebar">
-                <h2>UAS Asset Tracker</h2>
+                <h2>Asset Tracker</h2>
                 <ul>
                     <li><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                     <li><a href="furniture.html"><i class="fas fa-chair"></i> Furniture</a></li>
