--- a/resources/equipment.html
+++ b/resources/equipment.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
-            <h2>UAS Asset Tracker</h2>
+            <h2>Asset Tracker</h2>
             <ul>
                 <li><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                 <li><a href="furniture.html"><i class="fas fa-chair"></i> Furniture</a></li>
