--- a/resources/help.html
+++ b/resources/help.html
@@ -97,7 +97,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
-            <h2>UAS Asset Tracker</h2>
+            <h2>Asset Tracker</h2>
             <ul>
                 <li><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                 <li><a href="furniture.html"><i class="fas fa-chair"></i> Furniture</a></li>
@@ -110,7 +110,7 @@
 
 
                 <div class="container1">
-                    <h1>Welcome to the <span class="animated-text">UAS Asset Management App</span></h1>
+                    <h1>Welcome to the <span class="animated-text">Asset Management App</span></h1>
                     <p style="text-align: center; font-size: 1.2em;">This app helps you manage your company's assets with ease! </p>
             
                     <div class="feature">
